--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,15 +4,26 @@
     background-color: $background-gray;
 }
 
+.team {
+    @include media (tablet){
+        display: flex;
+        flex-wrap: wrap;
+        gap: $card-gap;
+    }
+}
+
 .team__item {
     background: $main-white-color;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
             0px 2px 1px rgb(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
 
-    &:not(:last-child) {
-        margin-bottom: $card-gap;
+    @include media (tablet, max) {
+        &:not(:last-child) {
+            margin-bottom: $card-gap;
+        }
     }
+    flex-basis: calc((100% - $card-gap) / 2);
 }
 
 .team__info {
