--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -7,13 +7,16 @@
 
 .clients__item {
     flex-basis: calc((100% - $card-gap) / 2);
+
+    @include media (tablet){
+        flex-basis: calc((100% - $card-gap * 2) / 3);
+    }
 }
 
 .clients__link {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @include centered-flex ($jc: center);
-    max-width: 210px;
     height: 92px;
 
     color: $socials-icon;
