--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -21,6 +21,19 @@
             background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
                     url(../images/hero-mob-bg@2x.jpg);
         }
+
+    @include media (tablet){
+        max-width: 768px;
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                url(../images/hero-tab-bg.jpg);
+    }
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../images/hero-tab-bg@2x.jpg);
+    }
 }
 
 .hero__title{
