--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,6 +5,11 @@
     font-weight: 700;
     font-size: 24px;
     line-height: decimal-round(28px / 24px);
+
+    @include media (desktop){
+        font-size: 26px;
+        line-height: decimal-round(31px / 26px);
+    }
 }
 
 // Лого хедер
