--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -11,6 +11,10 @@
     @include media (tablet){
         flex-basis: calc((100% - $card-gap * 2) / 3);
     }
+
+    @include media (desktop){
+        flex-basis: calc((100% - $card-gap * 5) / 6);
+    }
 }
 
 .clients__link {
