--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,70 +1,86 @@
 .hero {
-    padding-top: 118px;
-    padding-bottom: 118px;
-    margin: 0 auto;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  margin: 0 auto;
 
-    max-width: 480px;
-    height: 400px;
+  max-width: 480px;
+  height: 400px;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-mob-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  background-color: #c4c4c4;
+  text-align: center;
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/hero-mob-bg.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+      url(../images/hero-mob-bg@2x.jpg);
+  }
 
+  @include media(tablet) {
+    max-width: 768px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero-tab-bg.jpg);
+  }
 
-    background-color: #c4c4c4;
-    text-align: center;
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero-tab-bg@2x.jpg);
+  }
 
-    @media (min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx){
-            background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-                    url(../images/hero-mob-bg@2x.jpg);
-        }
+  @include media(desktop) {
+    padding-top: 200px;
+    padding-bottom: 200px;
 
-    @include media (tablet){
-        max-width: 768px;
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-                url(../images/hero-tab-bg.jpg);
-    }
+    max-width: 1600px;
+    height: 600px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero-desck-bg.jpg);
+  }
 
-    @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url(../images/hero-tab-bg@2x.jpg);
-    }
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero-desck-bg@2x.jpg);
+  }
 }
 
-.hero__title{
-    width: 360px;
-    margin: 0 auto;
-    margin-bottom: 30px;
+.hero__title {
+  width: 360px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 
-    font-weight: 900;
-    font-size: 26px;
-    line-height: decimal-round(42px/26px);
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: $main-white-color;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: decimal-round(42px/26px);
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: $main-white-color;
+
+  @include media(desktop) {
+    width: 696px;
+    font-size: 44px;
+    line-height: decimal-round(60px/44px);
+  }
 }
 
 .main-btn {
-    @include transition(background-color);
+  @include transition(background-color);
 
-    height: 50px;
-    min-width: 200px;
+  height: 50px;
+  min-width: 200px;
 
-    color: $main-white-color;
-    background-color: $link-color;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: decimal-round(30px/16px);
-    letter-spacing: 0.06em;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: $main-white-color;
+  background-color: $link-color;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: decimal-round(30px/16px);
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-    &:hover,
-    &:focus {
-        background-color: $button-hover;
-    }
+  &:hover,
+  &:focus {
+    background-color: $button-hover;
+  }
 }
