--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,206 +1,229 @@
 /* Модальне вікно */
 .backdrop {
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    opacity: 1;
+  opacity: 1;
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 
-    background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
 
-    &--is-hidden {
-        visibility: hidden;
-        opacity: 0;
-        pointer-events: none;
-    }
+  &--is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 
 .modal {
-    @include transition (transform);
+  @include transition(transform);
 
-    transform: translate(-50%, -50%) scale(1);
-    position: absolute;
-    top: 50%;
-    left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
 
-    width: 100%;
-    min-height: 609px;
-    padding: 40px;
+  width: 100%;
+  min-height: 609px;
+  padding: 40px;
 
-    background-color: $main-white-color;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: $border-radius;
+  background-color: $main-white-color;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: $border-radius;
 
-    .backdrop--is-hidden & {
-        transform: translate(-50%, -50%) scale(0.5);
-    }
+  .backdrop--is-hidden & {
+    transform: translate(-50%, -50%) scale(0.5);
+  }
 
-    @media screen and (min-width: 480px) and (max-width: 1200px){
-        width: 450px;
-    }
+  @media screen and (min-width: 480px) and (max-width: 1200px) {
+    width: 450px;
+  }
+
+  @include media(desktop) {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal__close-btn {
-    @include transition (color);
-    position: absolute;
-    top: 8px;
-    right: 8px;
+  @include transition(color);
+  position: absolute;
+  top: 8px;
+  right: 8px;
 
-    padding: 5px;
-    width: 30px;
-    height: 30px;
+  padding: 5px;
+  width: 30px;
+  height: 30px;
 
-    background-color: $main-white-color;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
+  background-color: $main-white-color;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 
-    &:hover,
-    &:focus {
-        color: $link-color;
-    }
+  &:hover,
+  &:focus {
+    color: $link-color;
+  }
 }
 
 .modal__close-icon {
-    width: 18px;
-    height: 18px;
+  width: 18px;
+  height: 18px;
 
-    fill: currentColor;
+  fill: currentColor;
 }
 
 /* Форма вводу данних */
 .form-modal {
-    text-align: center;
+  text-align: center;
 }
 
 .form-modal__title {
-    margin-bottom: 12px;
+  margin-bottom: 12px;
 
-    display: block;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: decimal-round(30px / 20px);
+  display: block;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: decimal-round(30px / 20px);
+
+  @include media(desktop) {
+    line-height: decimal-round(23px / 20px);
+  }
 }
 
 .form-modal__field {
-    position: relative;
-    margin-bottom: 10px;
-    display: block;
-    text-align: left;
+  position: relative;
+  margin-bottom: 10px;
+  display: block;
+  text-align: left;
 
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
 
-    &:focus-within .form-modal__icon {
-        color: $link-color;
-    }
+  &:focus-within .form-modal__icon {
+    color: $link-color;
+  }
 
-    &:focus-within .form-modal__input {
-        outline: none;
-        border-color: $link-color;
-    }
+  &:focus-within .form-modal__input {
+    outline: none;
+    border-color: $link-color;
+  }
 }
 
 .form-modal__label {
-    margin-bottom: 4px;
+  margin-bottom: 4px;
 
-    display: block;
-    color: $secondary-text-color;
+  display: block;
+  color: $secondary-text-color;
 }
 
 .form-modal__input {
-    @include transition (border-color);
+  @include transition(border-color);
 
-    width: 100%;
-    height: 40px;
-    padding-left: 42px;
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
 
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: $border-radius;
-    font-size: 16px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: $border-radius;
+  font-size: 16px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
 }
 
 .form-modal__input--comment {
-    padding: 12px 16px;
-    margin-bottom: 20px;
-    width: 100%;
-    height: 120px;
-    resize: none;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 120px;
+  resize: none;
 
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: $border-radius;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: $border-radius;
 
-    &::placeholder {
-        font-size: 12px;
-        line-height: decimal-round(14px / 12px);
-        letter-spacing: 0.01em;
-        color: rgba(117, 117, 117, 0.5);
-    }
+  &::placeholder {
+    font-size: 12px;
+    line-height: decimal-round(14px / 12px);
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 
 .form-modal__icon {
-    @include transition (color);
-    position: absolute;
-    bottom: 0;
-    left: 0;
+  @include transition(color);
+  position: absolute;
+  bottom: 0;
+  left: 0;
 
-    margin-left: 12px;
-    margin-bottom: 11px;
+  margin-left: 12px;
+  margin-bottom: 11px;
 
-    fill: currentColor;
+  fill: currentColor;
 }
 
 .form-checkbox {
-    @include centered-flex (inline-flex);
+  @include centered-flex(inline-flex);
 
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .form-checkbox__label {
-    margin-left: 8px;
-    margin-right: 5px;
+  margin-left: 8px;
+  margin-right: 5px;
 
-    font-size: 12px;
-    line-height: decimal-round(14px / 12px);
-    color: $secondary-text-color;
-    user-select: none;
+  font-size: 12px;
+  line-height: decimal-round(14px / 12px);
+  color: $secondary-text-color;
+  user-select: none;
+
+  @include media(desktop) {
+    font-size: 14px;
+    line-height: decimal-round(24px / 14px);
+  }
+
+  @include media(desktop) {
+    margin-left: 7px;
+  }
 }
 
 .form-checkbox__link {
-    font-size: 12px;
-    line-height: decimal-round(14px / 12px);
-    color: $link-color;
-    text-underline-offset: 3px;
+  font-size: 12px;
+  line-height: decimal-round(14px / 12px);
+  color: $link-color;
+  text-underline-offset: 3px;
+
+  @include media(desktop) {
+    font-size: 14px;
+    line-height: decimal-round(24px / 14px);
+  }
 }
 
 .form-checkbox__input {
-    @extend %visually-hidden;
+  @extend %visually-hidden;
 
-    &:checked+.form-checkbox__icon .form-checkbox__mark--uncheck {
-        opacity: 0;
-    }
+  &:checked + .form-checkbox__icon .form-checkbox__mark--uncheck {
+    opacity: 0;
+  }
 
-    &:checked+.form-checkbox__icon .form-checkbox__mark--check {
-        opacity: 1;
-    }
+  &:checked + .form-checkbox__icon .form-checkbox__mark--check {
+    opacity: 1;
+  }
 }
 
 .form-checkbox__mark--uncheck {
-    @include transition (opacity);
-    opacity: 1;
+  @include transition(opacity);
+  opacity: 1;
 }
 
 .form-checkbox__mark--check {
-    @include transition (opacity);
-    opacity: 0;
+  @include transition(opacity);
+  opacity: 0;
 }
