--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -1,119 +1,129 @@
 /* Футер */
 .page-footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
-    background-color: #2f303a;
+  background-color: #2f303a;
+
+  @include media(desktop, max) {
     text-align: center;
-
-    // @media screen and (min-width: 768px) and (max-width: 1199px) {
-    //     padding-left: 86px;
-    //     padding-right: 86px;
-    // }
+  }
 }
 
-.page-footer__container{
-    @include media (tablet){
-        @include centered-flex ($ai: baseline, $jc: center);
-            flex-wrap: wrap;
-    }
-    
+.page-footer__container {
+  @include media(tablet) {
+    @include centered-flex($ai: baseline, $jc: center);
+    flex-wrap: wrap;
+  }
 }
 
 .page-footer__subtitle {
-    display: block;
-    margin-bottom: 20px;
+  display: block;
+  margin-bottom: 20px;
 
-    color: $main-white-color;
-    line-height: 1.14;
-    text-transform: uppercase;
+  color: $main-white-color;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 
 /* Контакти футер */
 .contacts-footer {
-    @include media(descktop, max){
-        margin-bottom: 60px;
-    }
+  @include media(desktop, max) {
+    margin-bottom: 60px;
+  }
 
-    @include media (tablet){
-        margin-right: 170px;
-    }
-    
-        
+  @include media(tablet) {
+    margin-right: 170px;
+  }
+
+  @include media(desktop) {
+    margin-right: auto;
+  }
 }
 
 .contacts-footer__address {
-    margin-top: 20px;
+  margin-top: 20px;
 
-    font-style: normal;
+  font-style: normal;
 }
 
 .contacts-footer__item:not(:last-child) {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
+
+  @include media(desktop) {
+    margin-bottom: 9px;
+  }
 }
 
 .contacts-footer__link {
-    @include transition (color);
+  @include transition(color);
 
-    color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.6);
+  line-height: 1.71;
+
+  &--map {
+    color: $main-white-color;
     line-height: 1.71;
+  }
 
-    &--map {
-        color: $main-white-color;
-        line-height: 1.71;
-    }
-
-    &:hover,
-    &:focus {
-        color: $link-color;
-    }
+  &:hover,
+  &:focus {
+    color: $link-color;
+  }
 }
 
 /* Приєднуйтесь-соцмережі */
 .socials-box {
-    @include media(descktop, max) {
-        margin-bottom: 60px;
-    }
+  @include media(desktop, max) {
+    margin-bottom: 60px;
+  }
 
-        // margin-left: auto;
+  @include media(desktop) {
+    margin-right: auto;
+  }
 }
 
 .socials__item--color-footer {
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
 }
 
 .socials__icon--color-footer {
-    fill: $main-white-color;
+  fill: $main-white-color;
 }
 
 /* Форма підписки */
 .form-footer__input {
-    padding: 15px;
-    width: 100%;
+  padding: 15px;
 
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    background-color: transparent;
-    font-size: 16px;
-    line-height: 1.25;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+
+  &::placeholder {
     color: rgba(255, 255, 255, 0.6);
+  }
 
-    &::placeholder {
-        color: rgba(255, 255, 255, 0.6);
-    }
+  @include media(desktop, max) {
+    margin-bottom: 20px;
+    width: 100%;
+  }
 
-    @include media(descktop, max) {
-        margin-bottom: 20px;
-    }
+  @include media(desktop) {
+    margin-right: 12px;
+    min-width: 358px;
+  }
 }
 
 .form-footer__btn {
-    @include centered-flex (inline-flex, $jc: center)
+  @include centered-flex (inline-flex, $jc: center);
 }
 
 .form-footer__btn-icon {
-    margin-left: 10px;
-    fill: currentColor;
+  margin-left: 10px;
+  fill: currentColor;
 }
