--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,161 +1,189 @@
-.page-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
+.page-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 
-    width: 100%;
-    border-bottom: 1px solid #ececec;
-    background-color: $main-white-color;
+  width: 100%;
+  border-bottom: 1px solid #ececec;
+  background-color: $main-white-color;
 }
 
-.page-header__container{
-    // position: relative;
-    @include media (tablet, max){
-        @include centered-flex ($jc: space-between);
-            height: 60px;
-    }
- 
-    @include media (tablet){
-        @include centered-flex;
-    }
+.page-header__container {
+  // position: relative;
+  @include media(tablet, max) {
+    @include centered-flex($jc: space-between);
+    height: 60px;
+  }
+
+  @include media(tablet) {
+    @include centered-flex;
+  }
 }
 
 // Навігація
 
-.navigation{
-    @include media (tablet, max) {
+.navigation {
+  @include media(tablet, max) {
     margin-bottom: 302px;
-    }
+  }
+  font-weight: 500;
+  font-size: 40px;
+  line-height: decimal-round(47px / 40px);
+  letter-spacing: 0.02em;
+
+  @include media(tablet) {
     font-weight: 500;
-    font-size: 40px;
-    line-height: decimal-round(47px / 40px) ;
+    font-size: 14px;
+    line-height: decimal-round(16px / 14px);
     letter-spacing: 0.02em;
-
-        @include media (tablet) {
-            
-            font-weight: 500;
-            font-size: 14px;
-            line-height: 16px;
-            letter-spacing: 0.02em;
-        }  
-}
-.navigation__list{
-    @include media (tablet) {
-            display: flex;
-            gap: 50px;
-    }
-}
-.navigation__item{
-    &:not(:last-child) {
-        @include media (tablet, max) {
-            margin-bottom: 32px;
-        }
-    }
-
-    @include media (tablet) {
-        
-    }
+  }
 }
 
-.navigation__link{
+.navigation__list {
+  @include media(tablet) {
+    display: flex;
+    gap: 50px;
+  }
+
+  @include media(desktop) {
+    margin-left: 93px;
+  }
+}
+
+.navigation__item {
+  &:not(:last-child) {
+    @include media(tablet, max) {
+      margin-bottom: 32px;
+    }
+  }
+}
+
+.navigation__link {
+  @include transition(color);
+
+  &:hover,
+  &:focus {
+    color: $link-color;
+  }
+
+  &--current {
+    color: $link-color;
+  }
+
+  @include media(tablet) {
     @include transition(color);
+    position: relative;
 
-    &:hover, &:focus {
-        color: $link-color;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    &--current::after {
+      position: absolute;
+      bottom: -1px;
+      left: 0;
+
+      content: '';
+      width: 100%;
+      height: 4px;
+
+      background-color: $link-color;
+      border-radius: 2px;
     }
-
-    &--current {
-        color: $link-color;
-    }
-
-    @include media (tablet) {
-        @include transition(color);
-        position: relative;
-        
-        display: block;
-        padding-top: 32px;
-        padding-bottom: 32px;
-
-        &--current::after {
-            position: absolute;
-            bottom: -1px;
-            left: 0;
-        
-            content: '';
-            width: 100%;
-            height: 4px;
-        
-            background-color: $link-color;
-            border-radius: 2px;
-        }    
-    }
+  }
 }
 
 // Контакти хедер
-.contacts{
-    @include media (tablet, max) {
+.contacts {
+  @include media(tablet, max) {
     margin-bottom: 64px;
-    }
+    display: flex;
+    flex-direction: column;
+  }
 
-    @include media (tablet) {
-        margin-left: auto;
-    }
+  @include media(tablet) {
+    margin-left: auto;
+  }
+
+  @include media(desktop) {
+    display: flex;
+
+    margin-left: auto;
+  }
 }
 
-.contacts__item:not(:last-child){
-    @include media (tablet, max) {
-        margin-bottom: 32px;
+.contacts__item {
+  &:not(:last-child) {
+    @include media(tablet, max) {
+      margin-top: 32px;
+      order: 1;
     }
 
-    @include media (descktop, max) {
-        margin-bottom: 10px;
-    }  
-}
+    @include media(tablet) {
+      margin-bottom: 10px;
+    }
+  }
 
-.contacts__link{
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                font-size 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    font-weight: 500;
-    font-size: 24px;
-    line-height: decimal-round(28px / 24px);
-    letter-spacing: 0.02em;
-    color: $secondary-text-color;
-
-    &:hover, &:focus {
-        @include media (tablet, max) {
-        font-size: 34px;
+  @include media(desktop) {
+    &:not(:last-child) {
+            margin-right: $card-gap;
         }
-        color: $link-color;
-    }
-
-    @include media (tablet){
-        @include centered-flex;
-
-        font-size: 12px;
-    }
+  }
 }
 
-.contacts__icon{
-    @include media (tablet, max){
-        display: none;
-    }
+.contacts__link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), font-size 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-weight: 500;
+  font-size: 24px;
+  line-height: decimal-round(28px / 24px);
+  letter-spacing: 0.02em;
+  color: $secondary-text-color;
 
-    @include media (tablet) {
-        margin-right: 8px;
-        
-        fill: currentColor;
-
-        @include media (descktop, max) {
-            &--mail {
-                width: 14px;
-                height: 10px;
-            }
-                
-            &--tel {
-                width: 10px;
-                height: 14px;
-            }
-        }   
+  &:hover,
+  &:focus {
+    @include media(tablet, max) {
+      font-size: 34px;
     }
+    color: $link-color;
+  }
+
+  @include media(tablet) {
+    @include centered-flex;
+
+    font-size: 12px;
+  }
+
+  @include media(desktop) {
+    font-size: 14px;
+        line-height: decimal-round(16px / 14px);
+  }
+}
+
+.contacts__icon {
+  @include media(tablet, max) {
+    display: none;
+  }
+
+  @include media(tablet) {
+    margin-right: 8px;
+
+    fill: currentColor;
+
+    @include media(desktop, max) {
+      &--mail {
+        width: 14px;
+        height: 10px;
+      }
+
+      &--tel {
+        width: 10px;
+        height: 14px;
+      }
+    }
+  }
+
+  @include media(desktop) {
+    margin-right: 10px;
+  }
 }
