--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -13,6 +13,8 @@
 }
 
 .team__item {
+    flex-basis: calc((100% - $card-gap) / 2);
+
     background: $main-white-color;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
             0px 2px 1px rgb(0, 0, 0, 0.2);
@@ -23,11 +25,19 @@
             margin-bottom: $card-gap;
         }
     }
-    flex-basis: calc((100% - $card-gap) / 2);
+
+    @include media (desktop){
+        flex-basis: calc((100% - $card-gap * 3) / 4);
+    }
+    
 }
 
 .team__info {
     padding: $card-gap 0 24px;
+
+    @include media (desktop) {
+        padding: $card-gap 0;
+    }
 }
 
 .team__member-name {
