--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -1,11 +1,11 @@
 body {
-    padding-top: 60px;
+  padding-top: 60px;
 
-    color: $main-text-color;
-    background-color: $main-white-color;
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    letter-spacing: 0.03em;
+  color: $main-text-color;
+  background-color: $main-white-color;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.03em;
 }
 
 h1,
@@ -15,67 +15,71 @@ h4,
 h5,
 h6,
 p {
-    margin: 0;
+  margin: 0;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .section {
-    /* outline: 2px solid yellow; */
+  /* outline: 2px solid yellow; */
 
-    padding-top: 60px;
-    padding-bottom: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @include media(desktop) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .container {
-    /* outline: 2px solid red; */
+  /* outline: 2px solid red; */
 
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 
-    @media screen and (min-width: 480px){
-        width: 480px;
-    }
+@include media(mobile) {
+    width: 480px;
+  }
 
-    @media screen and (min-width: 768px) {
-        width: 768px;
-    }
+  @include media(tablet) {
+    width: 768px;
+  }
 
-    @media screen and (min-width: 1200px) {
-        width: 1200px;
-    }
-
+  @include media(desktop) {
+    width: 1200px;
+  }
 }
 
 .button {
-    padding: 0;
-    cursor: pointer;
-    border: none;
-    border-radius: $border-radius;
+  padding: 0;
+  cursor: pointer;
+  border: none;
+  border-radius: $border-radius;
 }
 
 .list {
-    margin: 0;
-    padding-left: 0;
+  margin: 0;
+  padding-left: 0;
 
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .link {
-    text-decoration: none;
-    color: currentColor;
+  text-decoration: none;
+  color: currentColor;
 }
 
 .secondary-title {
-    margin-bottom: $card-gap;
+  margin-bottom: $card-gap;
 
-    font-size: 28px;
-    line-height: decimal-round(33px / 28px);
-    text-align: center;
+  font-size: 28px;
+  line-height: decimal-round(33px / 28px);
+  text-align: center;
 }
