--- a/css/main.css
+++ b/css/main.css
@@ -401,16 +401,18 @@ img {
   fill: currentColor;
 }
 
-.mobile-socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 10px;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: #2196f3;
+@media screen and (max-width: 767px) {
+  .mobile-socials {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 10px;
+    font-weight: 500;
+    font-size: 3.75vw;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: #2196f3;
+  }
 }
 @media screen and (min-width: 768px) {
   .mobile-socials {
@@ -712,6 +714,11 @@ img {
       -ms-user-select: none;
           user-select: none;
 }
+@media screen and (max-width: 440px) {
+  .form-checkbox__label {
+    font-size: 2.5vw;
+  }
+}
 @media screen and (min-width: 1200px) {
   .form-checkbox__label {
     font-size: 14px;
@@ -729,6 +736,11 @@ img {
   line-height: 1.17;
   color: #2196f3;
   text-underline-offset: 3px;
+}
+@media screen and (max-width: 440px) {
+  .form-checkbox__link {
+    font-size: 2.5vw;
+  }
 }
 @media screen and (min-width: 1200px) {
   .form-checkbox__link {
@@ -1154,11 +1166,30 @@ img {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 100%;
+  }
+}
 
 .portfolio__description {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: none;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio__description {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
 }
 
 .portfolio__title {
