--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -184,6 +184,10 @@
   color: $secondary-text-color;
   user-select: none;
 
+  @media screen and (max-width: 440px) {
+      font-size: 2.5vw;
+    }
+
   @include media(desktop) {
     font-size: 14px;
     line-height: decimal-round(24px / 14px);
@@ -199,6 +203,10 @@
   line-height: decimal-round(14px / 12px);
   color: $link-color;
   text-underline-offset: 3px;
+
+  @media screen and (max-width: 440px) {
+      font-size: 2.5vw;
+    }
 
   @include media(desktop) {
     font-size: 14px;
