--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -71,6 +71,12 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 }
 
 .portfolio__description {
@@ -78,6 +84,10 @@
 
   border: 1px solid #eeeeee;
   border-top: none;
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+        flex-grow: 1;
+    }
 }
 
 .portfolio__title {
