--- a/css/main.css
+++ b/css/main.css
@@ -92,10 +92,17 @@ img {
 }
 
 .secondary-title {
-  margin-bottom: 30px;
-  font-size: 28px;
-  line-height: 1.18;
+  margin-bottom: 50px;
+  font-size: 36px;
+  line-height: 1.17;
   text-align: center;
+}
+@media screen and (max-width: 1199px) {
+  .secondary-title {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.18;
+  }
 }
 
 .logo {
@@ -164,15 +171,21 @@ img {
 }
 @media screen and (max-width: 767px) {
   .navigation {
-    margin-bottom: 302px;
+    margin-bottom: auto;
   }
 }
 @media screen and (min-width: 768px) {
   .navigation {
+    margin-left: 88px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .navigation {
+    margin-left: 93px;
   }
 }
 
@@ -182,11 +195,6 @@ img {
     display: -ms-flexbox;
     display: flex;
     gap: 50px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .navigation__list {
-    margin-left: 93px;
   }
 }
 
@@ -261,7 +269,7 @@ img {
             order: 1;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts__item:not(:last-child) {
     margin-bottom: 10px;
   }
@@ -336,7 +344,7 @@ img {
 
 @media screen and (max-width: 767px) {
   .mobile-menu {
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0;
     opacity: 0;
@@ -349,9 +357,17 @@ img {
     transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1), visibility 1000ms cubic-bezier(0.4, 0, 0.2, 1), opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1), visibility 1000ms cubic-bezier(0.4, 0, 0.2, 1), opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
+    height: 100%;
     padding-top: 48px;
     padding-bottom: 48px;
     padding-left: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     background-color: #ffffff;
   }
   .mobile-menu.is-open {
@@ -370,7 +386,6 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin-left: 88px;
     width: 100%;
   }
 }
@@ -429,7 +444,7 @@ img {
   padding-top: 118px;
   padding-bottom: 118px;
   margin: 0 auto;
-  max-width: 480px;
+  max-width: 1600px;
   height: 400px;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-mob-bg.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mob-bg.jpg);
@@ -476,7 +491,7 @@ img {
 }
 
 .hero__title {
-  width: 360px;
+  max-width: 360px;
   margin: 0 auto;
   margin-bottom: 30px;
   font-weight: 900;
@@ -488,7 +503,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
-    width: 696px;
+    max-width: 696px;
     font-size: 44px;
     line-height: 1.36;
   }
@@ -880,13 +895,6 @@ img {
   }
 }
 
-.secondary-title {
-  margin-bottom: 50px;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
-
 .works {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1101,7 +1109,12 @@ img {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-bottom: 56px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-filters {
+    margin-bottom: 50px;
   }
 }
 
@@ -1230,7 +1243,7 @@ img {
   padding-left: 24px;
   padding-right: 24px;
   width: 100%;
-  height: 100%;
+  height: 101%;
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
   font-size: 18px;
