--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,6 +1,6 @@
 .mobile-menu {
   @include media(tablet, max) {
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0;
     opacity: 0;
@@ -11,9 +11,13 @@
       visibility 1000ms cubic-bezier(0.4, 0, 0.2, 1), opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
     width: 100%;
+    height: 100%;
     padding-top: 48px;
     padding-bottom: 48px;
     padding-left: 40px;
+
+    display: flex;
+    flex-direction: column;
 
     background-color: $main-white-color;
 
@@ -27,7 +31,6 @@
 
   @include media(tablet) {
     @include centered-flex;
-    margin-left: 88px;
     width: 100%;
   }
 }
