--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -10,8 +10,12 @@
 
   @include media(tablet) {
     justify-content: center;
-    margin-bottom: 56px;
+    margin-bottom: $card-gap;
   }
+
+    @include media(desktop) {
+      margin-bottom: 50px;
+    }
 }
 
 .portfolio-filters__btn {
@@ -52,7 +56,6 @@
             }
     }
   
-
   @include media(tablet) {
     flex-basis: calc((100% - $card-gap) / 2);
   }
@@ -121,7 +124,7 @@
   padding-left: 24px;
   padding-right: 24px;
   width: 100%;
-  height: 100%;
+  height: 101%;
 
   color: $main-white-color;
   background-color: rgba(33, 150, 243, 0.9);
